Fix up various things