@@ -30,7 +30,7 @@ class UpgradeToJava17Test implements RewriteTest {
     @Override
     public void defaults(RecipeSpec spec) {
         spec.recipe(Environment.builder()
-          .scanRuntimeClasspath("org.openrewrite.java.migrate")
+          .scanRuntimeClasspath()
           .build()
           .activateRecipes("org.openrewrite.java.migrate.UpgradeToJava17"));
     }
@@ -72,50 +72,50 @@ class UpgradeToJava17Test implements RewriteTest {
               """
           ),
           version(
-          //language=java
-              srcMainJava(
-                  java(
-                    """
-                      package com.abc;
-        
-                      import java.util.Collections;
-                      import java.util.List;
-                      import java.util.Map;
-                      import java.util.Set;
-                      
-                      class A {
-                         private static final List<String> staticList = Collections.singletonList("0");
-                         
-                         /* This is a comment */
-                         public void test() {
-                             // This is a comment
-                             Set<String> stringSet = Collections.singleton("aaa");
-                             List<String> stringList = Collections.singletonList("bbb");
-                             Map<String, String> stringMap = Collections.singletonMap("a-key", "a-value");
-                         }
-                      }
-                      """,
-                    """
-                      package com.abc;
-        
-                      import java.util.List;
-                      import java.util.Map;
-                      import java.util.Set;
-        
-                      class A {
-                         private static final List<String> staticList = List.of("0");
+            //language=java
+            srcMainJava(
+              java(
+                """
+                  package com.abc;
+                          
+                  import java.util.Collections;
+                  import java.util.List;
+                  import java.util.Map;
+                  import java.util.Set;
+                                        
+                  class A {
+                     private static final List<String> staticList = Collections.singletonList("0");
+                     
+                     /* This is a comment */
+                     public void test() {
+                         // This is a comment
+                         Set<String> stringSet = Collections.singleton("aaa");
+                         List<String> stringList = Collections.singletonList("bbb");
+                         Map<String, String> stringMap = Collections.singletonMap("a-key", "a-value");
+                     }
+                  }
+                  """,
+                """
+                  package com.abc;
+                          
+                  import java.util.List;
+                  import java.util.Map;
+                  import java.util.Set;
+                          
+                  class A {
+                     private static final List<String> staticList = List.of("0");
 
-                         /* This is a comment */
-                         public void test() {
-                             // This is a comment
-                             Set<String> stringSet = Set.of("aaa");
-                             List<String> stringList = List.of("bbb");
-                             Map<String, String> stringMap = Map.of("a-key", "a-value");
-                         }
-                      }
-                      """
-                  )
-              ),
+                     /* This is a comment */
+                     public void test() {
+                         // This is a comment
+                         Set<String> stringSet = Set.of("aaa");
+                         List<String> stringList = List.of("bbb");
+                         Map<String, String> stringMap = Map.of("a-key", "a-value");
+                     }
+                  }
+                  """
+              )
+            ),
             17)
         );
     }
